# movie-review-solana

./: .gitignore  idl.json  package-lock.json  package.json  tailwind.config.js
adminapp/: firebase.json  pubspec.yaml
adminapp/android/app/: build.gradle  google-services.json
adminapp/lib/: Homepage.dart  firebase_options.dart  main.dart
adminapp/lib/bloc/: film_bloc.dart  film_event.dart  film_state.dart
backend/: Cargo.toml
backend/src/: db.rs  main.rs  models.rs
backend/src/db/: Database.rs
backend/src/models/: movie.rs
pages/: Home.js  _app.js  index.js
pages/Components/: Cards.js  Initialize.js  Navbar.js  WalletContextProvider.js  cardpage.js
pages/movie/: [movie].js
styles/: globals.css
