[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
mongodb = "2.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
actix-cors = "0.7.0"
shuttle = "0.7.1"
shuttle-actix-web = "0.46"
shuttle-runtime = "0.46.0"
